--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -14,11 +14,31 @@
       <li>Brand: <%= product.brand %></li>
       <li>Harga: <%= product.price %></li>
       <li>Warna: <%= product.color %></li>
-      <li>Kategori: <%= product.category %></li>
+      <li>
+        Category:
+        <a
+          href="/products?category=<%= product.category %>"
+        >
+          <%= product.category %></a
+        >
+      </li>
+      <!-- <li>
+        Kategori:
+        <a
+          href="/products?category=<%= product.category %>"
+          ><%= product.category %></a
+        >
+      </li> -->
     </ul>
     <a href="/products">All Product</a>
     <a href="/products/<%= product._id %>/edit"
       >Edit</a
     >
+    <form
+      action=" /products/<%= product._id %>?_method=DELETE"
+      method="POST"
+    >
+      <button type="submit">Delete</button>
+    </form>
   </body>
 </html>
