--- a/views/garment/show.ejs
+++ b/views/garment/show.ejs
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
@@ -14,14 +18,26 @@
       <li>Location: <%= garment.location %></li>
       <li>Kontak: <%= garment.contact %></li>
     </ul>
-    <a href="/garments">All Garment</a>
+    <h2>Products</h2>
+    <ul>
+      <% for( let product of garment.products) {
+      %>
+      <li>
+        <a href="/products/<%= product._id %>"
+          ><%= product.name %> - <%= product.brand
+          %></a
+        >
+      </li>
+      <% } %>
+    </ul>
+
+    <a href="/garments">All Garments</a>
     <a href="/garments/<%= garment._id %>/edit"
       >Edit</a
     >
-
     <form
-      action=" /garments/<%= garment._id %>?_method=DELETE"
-      method="POST"
+      action="/garments/<%= garment._id %>?_method=DELETE"
+      method="post"
     >
       <button type="submit">Delete</button>
     </form>
