--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
@@ -12,8 +16,8 @@
     <h1><%= product.name %></h1>
     <ul>
       <li>Brand: <%= product.brand %></li>
-      <li>Harga: <%= product.price %></li>
       <li>Warna: <%= product.color %></li>
+      <li>Harga: <%= product.price %></li>
       <li>
         Category:
         <a
@@ -22,21 +26,23 @@
           <%= product.category %></a
         >
       </li>
-      <!-- <li>
-        Kategori:
-        <a
-          href="/products?category=<%= product.category %>"
-          ><%= product.category %></a
-        >
-      </li> -->
     </ul>
-    <a href="/products">All Product</a>
+    <h2>Garment:</h2>
+    <ul>
+      <li>
+        <a
+          href="/garments/<%= product.garment._id %>"
+          ><%= product.garment.name %></a
+        >
+      </li>
+    </ul>
+    <a href="/products">All Products</a>
     <a href="/products/<%= product._id %>/edit"
       >Edit</a
     >
     <form
-      action=" /products/<%= product._id %>?_method=DELETE"
-      method="POST"
+      action="/products/<%= product._id %>?_method=DELETE"
+      method="post"
     >
       <button type="submit">Delete</button>
     </form>
