--- a/views/garment/index.ejs
+++ b/views/garment/index.ejs
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Garment</h1>
+    <p><%= flash_message %></p>
     <a href="/garments/create">Add Garment</a>
     <ul>
       <% for(let garment of garments) { %>
